tests/dataset/tpc-ds/compiler/pl/q4.error
run: exit status 2
[]
ERROR: /tmp/q4.pl:58: user:main Unknown message: error('expect failed')
